--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <!-- . -->
     <button onclick="ce()" class="squareButtons2 ce">Ce</button>
     <!-- ce -->
-    <button onclick="symbol('+', Value, storedArray, storedSym), calculate(displayText)" class="squareButtons2 add">+</button>
+    <button onclick="symbol('+', storedArray, storedSym, storedValue)" class="squareButtons2 add">+</button>
     <!-- + -->
-    <button onclick="symbol('-', Value, storedArray, storedSym)" class="squareButtons2 minus">-</button>
+    <button onclick="symbol('-', storedArray, storedSym, storedValue)" class="squareButtons2 minus">-</button>
     <!-- - -->
-    <button onclick="symbol('*')" class="squareButtons2 times">x</button>
+    <button onclick="symbol('*', storedArray, storedSym, storedValue)" class="squareButtons2 times">x</button>
     <!-- x -->
-    <button onclick="symbol('/')" class="squareButtons2 divide">/</button>
+    <button onclick="symbol('/', storedArray, storedSym, storedValue)" class="squareButtons2 divide">/</button>
     <!-- / -->
-    <button onclick="calculate(displayText)" class="squareButtons2 equals">=</button>
+    <button onclick="symbol('=', storedArray, storedSym, storedValue)" class="squareButtons2 equals">=</button>
     <!-- = -->
     
     </div>
